# GIRD8-Cuantitativo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: pipeline_state.json  settings.py
dashboards/r/: app.R
dashboards/r/R/: helpers.R  load_data.R  ui_tabs.R
dashboards/r/www/: styles.css
dashboards/web/: server.py
dashboards/web/static/: app.js  dashboard.html  index.html  landing.css  landing.html  styles.css
dashboards/web/static/js/: config.js  main.js
dashboards/web/static/js/charts/: manager.js
dashboards/web/static/js/services/: api.js
dashboards/web/static/js/state/: store.js
dashboards/web/static/js/ui/: render.js
dashboards/web/static/js/utils/: dom.js  format.js
data/raw/: .gitkeep
docs/: AGENTS.md  PROJECT_CONTEXT.md  README.md
scripts/: __init__.py  run_pipeline.py
src/: __init__.py
src/evaluate/: 02_evaluate.py  __init__.py
src/extract/: 01_extract.py  __init__.py
src/longitudinal/: 03_longitudinal.py  __init__.py
